Added an else clause on file listing loop for no results

--- a/resources/view/listing.html.twig
+++ b/resources/view/listing.html.twig
@@ -42,6 +42,8 @@
 		<div class="listing">
 		{% for file in files %}
 			<a href="{{ url('ms.cp.file_manager.detail', {fileID: file.id}) }}" data-live><img src="{{ resize(file.file.getPublicUrl, 200, 200) }}" alt="{{ file.altText }}" /></a>
+		{% else %}
+			<p>No files found</p>
 		{% endfor %}
 		</div>
 	</div>
