Added checkin listing view to show image thumbnail or filetype icon

--- a/resources/view/listing.html.twig
+++ b/resources/view/listing.html.twig
@@ -41,7 +41,13 @@
 	<div class="container-content file-manager extended">
 		<div class="listing">
 		{% for file in files %}
-			<a href="{{ url('ms.cp.file_manager.detail', {fileID: file.id}) }}" data-live><img src="{{ resize(file.file.getPublicUrl, 200, 200) }}" alt="{{ file.altText }}" /></a>
+			<a href="{{ url('ms.cp.file_manager.detail', {fileID: file.id}) }}" data-live>
+				{% if file.isTypeImage() %}
+					<img src="{{ resize(file.file.getPublicUrl, 200, 200) }}" alt="{{ file.altText }}" />
+				{% else %}
+					<img src="/path/to/file/type/icon.png" alt="{{ file.altText }}" />
+				{% endif %}
+			</a>
 		{% else %}
 			<p>No files found</p>
 		{% endfor %}
