Edited the templates to work with new resize-twig-functions

--- a/resources/view/detail.html.twig
+++ b/resources/view/detail.html.twig
@@ -14,7 +14,7 @@
 	<div class="container-details dual-column">
 
 		<div class="column">
-			<img class="file" src="{{ resize(file, 500, null) }}" alt="{{ file.altText }}" />
+			{{ getResizedImage(file, 500, null, {'class': 'file'}) }}
 		</div>
 		<div class="column">
 			<div class="section">
