--- a/resources/view/listing.html.twig
+++ b/resources/view/listing.html.twig
@@ -33,7 +33,7 @@
 		{% for file in files %}
 			<a href="{{ url('ms.cp.file_manager.detail', {fileID: file.id}) }}" data-live>
 				{% if file.isTypeImage() %}
-					<img src="{{ resize(file, 200, 200) }}" alt="{{ file.altText }}" />
+					{{ getResizedImage(file, 200, 200) }}
 				{% else %}
 					<img src="/path/to/file/type/icon.png" alt="{{ file.altText }}" />
 				{% endif %}
