--- a/resources/view/detail.html.twig
+++ b/resources/view/detail.html.twig
@@ -42,14 +42,14 @@
 						</tr>
 						<tr>
 							<td><strong>{{ 'ms.file_manager.detail.labels.author'|trans }}</strong></td>
-							<td>{{ author.getName }} at {{ file.authorship.createdAt|date }}</td>
+							<td>{{ file.authorship.createdUser.name }} at {{ file.authorship.createdAt|date }}</td>
 						</tr>
 
-						{% if file.authorship.updatedAt != NULL %}
+						{% if file.authorship.updatedAt is not empty %}
 
 							<tr>
 								<td><strong>{{ 'ms.file_manager.detail.labels.edit-by'|trans }}</strong></td>
-								<td>{{ file.authorship.updatedBy }} at {{ file.authorship.updatedAt|date }}</td>
+								<td>{{ file.authorship.updatedUser.name }} at {{ file.authorship.updatedAt|date }}</td>
 							</tr>
 
 						{% endif %}
