Showing image type name not ID

--- a/resources/view/detail.html.twig
+++ b/resources/view/detail.html.twig
@@ -34,7 +34,7 @@
 					<tbody>
 						<tr>
 							<td><strong>{{ 'ms.file_manager.detail.labels.type'|trans }}</strong></td>
-							<td>{{ file.typeID }}</td>
+							<td>{{ ('ms.file_manager.type.' ~ file.typeID)|trans }}</td>
 						</tr>
 						<tr>
 							<td><strong>{{ 'ms.file_manager.detail.labels.size'|trans }}</strong></td>
