Adding unit to file size
This would be made better with #38

--- a/resources/view/detail.html.twig
+++ b/resources/view/detail.html.twig
@@ -38,7 +38,7 @@
 						</tr>
 						<tr>
 							<td><strong>{{ 'ms.file_manager.detail.labels.size'|trans }}</strong></td>
-							<td>{{ file.fileSize }}</td>
+							<td>{{ file.fileSize }} bytes</td>
 						</tr>
 						<tr>
 							<td><strong>{{ 'ms.file_manager.detail.labels.dimensions'|trans }}</strong></td>
