Filemanager style tweak

--- a/resources/view/detail.html.twig
+++ b/resources/view/detail.html.twig
@@ -29,7 +29,7 @@
 				{{ form_end(form) }}
 			</div>
 			<div class="section">
-				<h3 class="title">Additional Information</h3>
+				<h2>Additional Information</h2>
 				<table>
 					<tbody>
 						<tr>
