Hide file manager filtering.

--- a/resources/view/listing.html.twig
+++ b/resources/view/listing.html.twig
@@ -8,7 +8,7 @@
 	{{ form_end(search_form) }}
 	</div>
 
-	<div class="filter-by">
+	<div class="filter-by" style="display: none;">
 		{{ form_start(filter_sort_form) }}
 			{{ form_row(filter_sort_form.sort) }}
 			{{ form_row(filter_sort_form.filter) }}
