--- a/resources/view/listing.html.twig
+++ b/resources/view/listing.html.twig
@@ -38,7 +38,7 @@
 					{{ getResizedImage(file, 200, 200) }}
 					<div class="file-overlay">{{ file.name }}</div>
 				{% else %}
-					<img src="/path/to/file/type/icon.png" alt="{{ file.altText }}" />
+					<img src="/cogules/Message:Mothership:ControlPanel/images/document.gif" alt="{{ file.altText }}" />
 					<div class="file-overlay">{{ file.name }}</div>
 				{% endif %}
 			</a>
