File name title change

--- a/resources/view/detail.html.twig
+++ b/resources/view/detail.html.twig
@@ -6,7 +6,7 @@
 
 {% block main %}
 <hgroup class="title">
-	<h1>{{ 'ms.file_manager.detail.labels.name'|trans }}: {{ file.name }}</h1>
+	<h1>{{ file.name }}</h1>
 </hgroup>
 
 <div class="container-content file-manager extended">
