removing the extended class off the container
Conflicts:
	resources/view/detail.html.twig

--- a/resources/view/detail.html.twig
+++ b/resources/view/detail.html.twig
@@ -5,71 +5,62 @@
 {% endblock %}
 
 {% block main %}
-<hgroup class="title">
-	<h1>{{ file.name }} <span>{{ ('ms.file_manager.type.' ~ file.typeID)|trans }}</span></h1>
-</hgroup>
-
-<div class="container-content file-manager extended">
-
-	<div class="container-details dual-column">
-
-		<div class="column">
-			{% if file.isTypeImage() %}
-				{{ getResizedImage(file, 500, null, {'class': 'file'}) }}
-			{% else %}
-				<img src="/cogules/Message:Mothership:ControlPanel/images/document.gif" alt="{{ file.altText }}" class="file" />
-			{% endif %}
-		</div>
-		<div class="column">
-			<div class="section">
-				{{ form_start(form) }}
-					{{ form_row(form.alt_text) }}
-					{{ form_row(form.tags) }}
-					<button name="update" type="submit" value="Submit" id="save-content" class="button small save">Save changes</button>
-				{{ form_end(form) }}
+	<hgroup class="title">
+		<h1>{{ 'ms.file_manager.detail.labels.name'|trans }}: {{ file.name }}</h1>
+	</hgroup>
+	<div class="container-content file-manager">
+		<div class="container-details dual-column">
+			<div class="column">
+				{% if file.isTypeImage() %}
+					{{ getResizedImage(file, null, null, {'class': 'file'}) }}
+				{% else %}
+					<img src="/path/to/file/type/icon.png" alt="{{ file.altText }}" />
+				{% endif %}
 			</div>
-			<div class="section">
-				<h2>Additional Information</h2>
-				<table>
-					<tbody>
-						<tr>
-							<td><strong>{{ 'ms.file_manager.detail.labels.type'|trans }}</strong></td>
-							<td>{{ ('ms.file_manager.type.' ~ file.typeID)|trans }}</td>
-						</tr>
-						<tr>
-							<td><strong>{{ 'ms.file_manager.detail.labels.size'|trans }}</strong></td>
-							<td>{{ file.fileSize }} bytes</td>
-						</tr>
-						{% if file.isTypeImage %}
-						<tr>
-							<td><strong>{{ 'ms.file_manager.detail.labels.dimensions'|trans }}</strong></td>
-							<td>{{ file.dimensionX }} x {{ file.dimensionY }}</td>
-						</tr>
-						{% endif %}
-						<tr>
-							<td><strong>{{ 'ms.file_manager.detail.labels.author'|trans }}</strong></td>
-							<td>{{ file.authorship.createdUser.name }} at {{ file.authorship.createdAt|date }}</td>
-						</tr>
-
-						{% if file.authorship.updatedAt is not empty %}
-
+			<div class="column">
+				<div class="section">
+					{{ form_start(form) }}
+						{{ form_row(form.alt_text) }}
+						{{ form_row(form.tags) }}
+						<button name="update" type="submit" value="Submit" id="save-content" class="button small save">Save changes</button>
+					{{ form_end(form) }}
+				</div>
+				<div class="section">
+					<h2>Additional information</h2>
+					<table>
+						<tbody>
 							<tr>
-								<td><strong>{{ 'ms.file_manager.detail.labels.edit-by'|trans }}</strong></td>
-								<td>{{ file.authorship.updatedUser.name }} at {{ file.authorship.updatedAt|date }}</td>
+								<td><strong>{{ 'ms.file_manager.detail.labels.type'|trans }}</strong></td>
+								<td>{{ ('ms.file_manager.type.' ~ file.typeID)|trans }}</td>
 							</tr>
-
-						{% endif %}
-					</tbody>
-				</table>
+							<tr>
+								<td><strong>{{ 'ms.file_manager.detail.labels.size'|trans }}</strong></td>
+								<td>{{ file.fileSize }} bytes</td>
+							</tr>
+							{% if file.isTypeImage %}
+							<tr>
+								<td><strong>{{ 'ms.file_manager.detail.labels.dimensions'|trans }}</strong></td>
+								<td>{{ file.dimensionX }} x {{ file.dimensionY }}</td>
+							</tr>
+							{% endif %}
+							<tr>
+								<td><strong>{{ 'ms.file_manager.detail.labels.author'|trans }}</strong></td>
+								<td>{{ file.authorship.createdUser.name }} at {{ file.authorship.createdAt|date }}</td>
+							</tr>
+							{% if file.authorship.updatedAt is not empty %}
+								<tr>
+									<td><strong>{{ 'ms.file_manager.detail.labels.edit-by'|trans }}</strong></td>
+									<td>{{ file.authorship.updatedUser.name }} at {{ file.authorship.updatedAt|date }}</td>
+								</tr>
+							{% endif %}
+						</tbody>
+					</table>
+				</div>
 			</div>
 		</div>
+		<form action="{{ url('ms.cp.file_manager.delete', {fileID: file.id}) }}" method="post" data-confirm="{{ 'ms.file_manager.delete.confirm'|trans }}" >
+			<input type="hidden" name="_method" value="DELETE">
+			<button name="delete[delete]" value="delete" id="delete" type="submit" class="button small delete">{{ 'ms.file_manager.detail.buttons.delete'|trans }}</button>
+		</form>
 	</div>
-
-	<form action="{{ url('ms.cp.file_manager.delete', {fileID: file.id}) }}" method="post" data-confirm="{{ 'ms.file_manager.delete.confirm'|trans }}" >
-		<input type="hidden" name="_method" value="DELETE">
-		<button name="delete[delete]" value="delete" id="delete" type="submit" class="button small delete">{{ 'ms.file_manager.detail.buttons.delete'|trans }}</button>
-	</form>
-
-</div>
-
 {% endblock %}
