--- a/resources/view/listing.html.twig
+++ b/resources/view/listing.html.twig
@@ -7,7 +7,6 @@
 		<button type="submit">Search</button>
 	{{ form_end(search_form) }}
 	</div>
-
 	{#
 	<div class="filter-by">
 		{{ form_start(filter_sort_form) }}
@@ -16,7 +15,6 @@
 		{{ form_end(filter_sort_form) }}
 	</div>
 	#}
-
 	<div class="file-upload">
 	{{ form_start(form) }}
 		{{ form_widget(form.new_upload, { 'attr': { 'multiple': 'multiple' }, 'full_name': form.new_upload.get('full_name') ~ 'upload[new_upload][]' }) }}
@@ -29,8 +27,7 @@
 	<hgroup class="title">
 		<h1>File Manager</h1>
 	</hgroup>
-
-	<div class="container-content file-manager extended">
+	<div class="container-content file-manager">
 		<div class="listing">
 		{% for file in files %}
 			<a href="{{ url('ms.cp.file_manager.detail', {fileID: file.id}) }}" data-live>
