Add tall container class.

--- a/resources/view/detail.html.twig
+++ b/resources/view/detail.html.twig
@@ -8,7 +8,7 @@
 	<hgroup class="title">
 			<h1>{{ file.name }} <span>{{ ('ms.file_manager.type.' ~ file.typeID)|trans }}</span></h1>
 	</hgroup>
-	<div class="container-content file-manager">
+	<div class="container-content file-manager tall">
 		<div class="container-details dual-column">
 			<div class="column">
 				{% if file.isTypeImage() %}
