print view file closes message/cog-mothership-commerce#250

--- a/resources/view/print.html.twig
+++ b/resources/view/print.html.twig
@@ -1,1 +1,4 @@
-{{ contents|raw }}
+<button onclick="window.print();" type="submit" class="button small save">Print</button>
+<div id="wrapper">
+	{{ contents|raw }}
+</div>
