--- a/resources/view/listing.html.twig
+++ b/resources/view/listing.html.twig
@@ -1,31 +1,22 @@
-{% extends 'Message:Mothership:ControlPanel::_templates/left_sidebar' %}
-
-{% block sidebar %}
-	<div class="search files">
-	{{ form_start(search_form) }}
-		{{ form_row(search_form.term, { 'attr': {'placeholder': 'Search files...' } }) }}
-		<button type="submit">Search</button>
-	{{ form_end(search_form) }}
-	</div>
-	{#
-	<div class="filter-by">
-		{{ form_start(filter_sort_form) }}
-			{{ form_row(filter_sort_form.sort) }}
-			{{ form_row(filter_sort_form.filter) }}
-		{{ form_end(filter_sort_form) }}
-	</div>
-	#}
-	<div class="file-upload">
-	{{ form_start(form) }}
-		{{ form_widget(form.new_upload, { 'attr': { 'multiple': 'multiple' }, 'full_name': form.new_upload.get('full_name') ~ 'upload[new_upload][]' }) }}
-		<button type="submit" class="button small upload">Upload a new file</button>
-	{{ form_end(form) }}
-	</div>
-{% endblock %}
+{% extends 'Message:Mothership:ControlPanel::_templates/cp' %}
 
 {% block main %}
 	<hgroup class="title">
 		<h1>File manager</h1>
+		<div class="controls">
+			<div class="search">
+				{{ form_start(search_form) }}
+					{{ form_row(search_form.term, { 'attr': {'placeholder': 'Search files...' } }) }}
+					<button type="submit">Search</button>
+				{{ form_end(search_form) }}
+			</div>
+			<div class="file-upload">
+				{{ form_start(form) }}
+					{{ form_widget(form.new_upload, { 'attr': { 'multiple': 'multiple' }, 'full_name': form.new_upload.get('full_name') ~ 'upload[new_upload][]' }) }}
+					<button type="submit" class="button small upload">Upload a new file</button>
+				{{ form_end(form) }}
+			</div>
+		</div>
 	</hgroup>
 	<div class="container-content file-manager">
 		<div class="listing">
