--- a/resources/assets/css/filemanager.css
+++ b/resources/assets/css/filemanager.css
@@ -23,6 +23,9 @@
 	display: none;
 }
 
+.listing {
+	clear: both;
+}
 
 .listing a,
 .listing .product-image {
@@ -31,10 +34,6 @@
 	margin: 0 23px 23px 0;
 	width: 200px;
 	height: 200px;
-	border: 5px solid #FFF;
-	-webkit-box-shadow: 0 0 0 1px #ccc, 0 1px 3px rgba(000,000,000,0.2);
-	-moz-box-shadow: 0 0 0 1px #ccc, 0 1px 3px rgba(000,000,000,0.2);
-	box-shadow: 0 0 0 1px #ccc, 0 1px 3px rgba(000,000,000,0.2);
 	text-decoration: none;
 }
 
@@ -50,7 +49,35 @@
 	z-index: 99px;
 	overflow: hidden;
 	padding: 10px 0 10px 10px;
-	width: 190px;
+	width: 200px;
 	background: rgba(0,0,0,0.5);
 	color: #eee;
+}
+
+
+.file {
+	position: absolute;
+	top: 0;
+	right: 0;
+	bottom: 0;
+	left: 0;
+	overflow: auto;
+	margin: auto;
+	padding: 0;
+	max-width: 500px;
+	width: auto;
+	height: auto;
+	border: 1px solid #CCC;
+	-webkit-box-shadow: 0 1px 6px rgba(000,000,000,0.1);
+	-moz-box-shadow: 0 1px 6px rgba(000,000,000,0.1);
+	box-shadow: 0 1px 6px rgba(000,000,000,0.1);
+}
+
+.file-manager .button.delete {
+	position: fixed;
+	top: 87px;
+	right: 151px;
+	z-index: 12;
+	display: inline-block;
+	margin-right: 25px;
 }
